Fix/scrollBarUi

--- a/src/app/body/task-details/add-watchers/add-watchers.component.css
+++ b/src/app/body/task-details/add-watchers/add-watchers.component.css
@@ -99,8 +99,18 @@ input:focus {
   width: 300px;
   overflow:scroll;
   max-height: 15vh;
+  overflow-x: hidden;
   background-color: var(--secondary-bg);
   color: var(--text);
   border-radius: 2%;
   box-shadow: var(--box-shadow-bottom);
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-color); 
+  border-radius: 10px;
 }
